--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     {% load static %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3Brokers Imobiliaria</title>
+  <title>Parnassa Imobiliária</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-PopzDcrsUfEZ5KgGlH6AgOeIdLNKIQ7WykdNsFzRyj17MAZJY+lqKjD2hQgiFD+G3bqV0jD47ufhX4x2j+Xu4w==" crossorigin="anonymous" />
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -70,8 +70,8 @@
       <div class="max-w-screen-xl mx-auto p-4 flex flex-wrap items-center justify-between">
         
         <!-- Logo no canto esquerdo -->
-        <a href="https://3brokers.com.br/" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="{% static 'img/logos/logo.png' %}" alt="New Logo" width="150">
+        <a href="https://parnassaimobiliaria.com.br/" class="flex items-center space-x-3 rtl:space-x-reverse">
+            <img src="{% static 'assets/img/logo.png' %}" alt="New Logo" width="150">
         </a>
   
         <!-- Menu button and links -->
@@ -171,7 +171,7 @@
 <section class="property" id="property">
     <div class="container flex justify-between items-center">
         <p class="section-subtitle">IMOVEIS NOVOS</p>
-        <a href="https://3brokers.com.br/imoveis/?tipo_imovel=NOVO&filter=" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">Ver Todos</a>
+        <a href="https://parnassaimobiliaria.com.br/imoveis/?tipo_imovel=NOVO&filter=" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">Ver Todos</a>
     </div>
     <ul class="property-list has-scrollbar">
         {% for imovel in imoveis_novos  %}
@@ -251,7 +251,7 @@
   <div class="container">
     <div class="container flex justify-between items-center">
         <p class="section-subtitle">IMOVEIS USADOS</p>
-        <a href="https://3brokers.com.br/imoveis/?tipo_imovel=USADO&filter=" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">Ver Todos</a>
+        <a href="https://parnassaimobiliaria.com.br/imoveis/?tipo_imovel=USADO&filter=" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">Ver Todos</a>
     </div>
       
       <ul class="property-list has-scrollbar">
@@ -323,7 +323,7 @@
   <div class="container">
     <div class="container flex justify-between items-center">
         <p class="section-subtitle">AGIOS</p>
-        <a href="https://3brokers.com.br/imoveis/?tipo_imovel=AGIO&filter=" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">Ver Todos</a>
+        <a href="https://parnassaimobiliaria.com.br/imoveis/?tipo_imovel=AGIO&filter=" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">Ver Todos</a>
     </div>
       
       <ul class="property-list has-scrollbar">
@@ -550,7 +550,7 @@
             </svg>
         </a>
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">Receba todas as novidades</h1>
-        <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-48 dark:text-gray-200">Ao se inscrever por email nos da  3Brokers Imobiliaria, iremos te enviar todas as novas atualizações de imoveis pelo o email assim você ficara por dentro de tudo.</p>
+        <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-48 dark:text-gray-200">Ao se inscrever por email nos da  Parnassa Imobiliária, iremos te enviar todas as novas atualizações de imoveis pelo o email assim você ficara por dentro de tudo.</p>
         <form class="w-full max-w-md mx-auto">   
             <label for="default-email" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Cadastro por e-mail</label>
             <div class="relative">
