--- a/templates/allimoveis.html
+++ b/templates/allimoveis.html
@@ -38,7 +38,7 @@
 
 <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="https://3brokers.com.br/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <a href="https://parnassaimobiliaria.com.br/" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="{% static 'img/logos/logo.png' %}" class="h-8" alt="New Logo">
             
         </a>
@@ -182,7 +182,7 @@
             </svg>
         </a>
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">Receba todas as novidades</h1>
-        <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-48 dark:text-gray-200">Ao se inscrever por email nos da  3Brokers Imobiliaria, iremos te enviar todas as novas atualizações de imoveis pelo o email assim você ficara por dentro de tudo.</p>
+        <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 lg:px-48 dark:text-gray-200">Ao se inscrever por email nos da  Parnassa Imobiliária, iremos te enviar todas as novas atualizações de imoveis pelo o email assim você ficara por dentro de tudo.</p>
         <form class="w-full max-w-md mx-auto">   
             <label for="default-email" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Cadastro por e-mail</label>
             <div class="relative">
