--- a/templates/base.html
+++ b/templates/base.html
@@ -50,9 +50,10 @@
         <!-- Sidebar Start -->
         <div class="sidebar pe-4 pb-3">
           <nav class="navbar bg-secondary navbar-dark">
-              <a href="{% url 'dashboard_redirect' %}" class="navbar-brand mx-4 mb-3">
-                  <h3 class="text-primary"><i class="fas fa-user-edit me-2"></i>CRM - GCI Flavio Kalleu</h3>
-              </a>
+            <a href="{% url 'dashboard_redirect' %}" class="navbar-brand mx-4 mb-3">
+                <img src="{% static 'assets/img/logo.png' %}" alt="Logo" class="img-fluid" style="max-width: 150px;">
+                
+            </a>
               <div class="d-flex align-items-center ms-4 mb-4">
                 <div class="position-relative">
                     {% if user.photo %}
@@ -79,10 +80,15 @@
                   <div class="nav-item dropdown">
                       <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-laptop me-2"></i>Adicionar</a>
                       <div class="dropdown-menu bg-transparent border-0">
+                        {% if request.user.is_superuser %}
                           <a href="{% url 'cadastro_corretores' %}" class="dropdown-item">Corretores</a>
                           <a href="{% url 'cadastro_correspondentes' %}" class="dropdown-item">Correspondentes</a>
+                          {% endif %}
+
                           <a href="{% url 'cliente-create' %}" class="dropdown-item">Cliente</a>
+                          {% if request.user.is_superuser %}
                           <a href="{% url 'adicionar_imovel' %}" class="dropdown-item">Imóveis</a>
+                          {% endif %}
                           <a href="{% url 'upload_video' %}" class="dropdown-item">Vídeos</a>
                       </div>
                   </div>
@@ -90,14 +96,21 @@
                       <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-th me-2"></i>Lista</a>
                       <div class="dropdown-menu bg-transparent border-0">
                           <a href="{% url 'lista_clientes' %}" class="dropdown-item">Clientes</a>
+                          {% if request.user.is_superuser %}
                           <a href="{% url 'lista_corretores' %}" class="dropdown-item">Corretores</a>
+                          {% endif %}
+
                           <a href="{% url 'lista_imoveis' %}" class="dropdown-item">Imóveis</a>
                           <a href="{% url 'lista_processos' %}" class="dropdown-item">Processo</a>
                           <a href="{% url 'lista_proprietarios' %}" class="dropdown-item">Proprietários</a>
                       </div>
                   </div>
+                  {% if request.user.is_superuser %}
                   <a href="{% url 'financas_view' %}" class="nav-item nav-link"><i class="fas fa-keyboard me-2"></i>Financeiro</a>
+                  {% endif %}
+                  
                   <a href="{% url 'consulta_cpf' %}" class="nav-item nav-link"><i class="fas fa-table me-2"></i>Consulta de CPF</a>
+                  
                   <a href="{% url 'assistir_videos' %}" class="nav-item nav-link"><i class="fas fa-chart-bar me-2"></i>Tutorial</a>
                   <a href="{% url 'marketing' %}" class="nav-item nav-link"><i class="fas fa-chart-bar me-2"></i>Marketing</a>
                   <a href="{% url 'relatorio_clientes' %}" class="nav-item nav-link"><i class="fas fa-chart-bar me-2"></i>Relatório de Clientes</a>
@@ -112,7 +125,7 @@
         <div class="content">
             <!-- Navbar Start -->
             <nav class="navbar navbar-expand bg-secondary navbar-dark sticky-top px-4 py-0">
-                <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
+                <a href="{% url 'dashboard_redirect' %}" class="navbar-brand d-flex d-lg-none me-4">
                     <h2 class="text-primary mb-0"><i class="fa fa-user-edit"></i></h2>
                 </a>
                 <a href="#" class="sidebar-toggler flex-shrink-0">
