--- a/templates/broker_dashboard.html
+++ b/templates/broker_dashboard.html
@@ -54,59 +54,75 @@
 
         <!-- Sidebar Start -->
         <div class="sidebar pe-4 pb-3">
-          <nav class="navbar bg-secondary navbar-dark">
-              <a href="index.html" class="navbar-brand mx-4 mb-3">
-                  <h3 class="text-primary"><i class="fas fa-user-edit me-2"></i>CRM GCI - Flavio kalleu</h3>
-              </a>
-              <div class="d-flex align-items-center ms-4 mb-4">
-               <div class="position-relative">
-                   {% if user.photo %}
-                   <img class="rounded-circle me-lg-2" src="{{ user.photo.url }}" alt="User Photo" style="width: 40px; height: 40px;">
-                   {% else %}
-                   <img class="rounded-circle me-lg-2" src="{% static 'assets/img/default-user-photo.jpg' %}" alt="User Photo" style="width: 40px; height: 40px;">
-                   {% endif %}
-                   <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
-               </div>
-               <div class="ms-3">
-                   <h6 class="mb-0">{{ user.first_name }} {{ user.last_name }}</h6>
-                   {% if user.is_corretor %}
-                               <span class="badge bg-primary">Corretor</span>
-                           {% elif user.is_staff %}
-                               <span class="badge bg-success">Admin</span>
-                           {% elif user.is_correspondente %}
-                               <span class="badge bg-warning text-dark">Correspondente</span>
-                           {% endif %}
-               </div>
-           </div>
-              <div class="navbar-nav w-100">
-                  <a href="{% url 'dashboard_redirect' %}" class="nav-item nav-link active"><i class="fas fa-tachometer-alt me-2"></i>Dashboard</a>
-                  <div class="nav-item dropdown">
-                      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-laptop me-2"></i>Adicionar</a>
-                      <div class="dropdown-menu bg-transparent border-0">
-                          <a href="{% url 'cadastro_corretores' %}" class="dropdown-item">Corretores</a>
-                          <a href="{% url 'cadastro_correspondentes' %}" class="dropdown-item">Correspondentes</a>
-                          <a href="{% url 'cliente-create' %}" class="dropdown-item">Cliente</a>
-                          <a href="{% url 'adicionar_imovel' %}" class="dropdown-item">Imóveis</a>
-                          <a href="{% url 'upload_video' %}" class="dropdown-item">Vídeos</a>
+            <nav class="navbar bg-secondary navbar-dark">
+                <a href="{% url 'dashboard_redirect' %}" class="navbar-brand mx-4 mb-3">
+                    <img src="{% static 'assets/img/logo.png' %}" alt="Logo" class="img-fluid" style="max-width: 150px;">
+                    
+                </a>
+                  <div class="d-flex align-items-center ms-4 mb-4">
+                    <div class="position-relative">
+                        {% if user.photo %}
+                        <img class="rounded-circle me-lg-2" src="{{ user.photo.url }}" alt="User Photo" style="width: 40px; height: 40px;">
+                        {% else %}
+                        <img class="rounded-circle me-lg-2" src="{% static 'assets/img/default-user-photo.jpg' %}" alt="User Photo" style="width: 40px; height: 40px;">
+                        {% endif %}
+                        <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
+                    </div>
+                    <div class="ms-3">
+                        <h6 class="mb-0">{{ user.first_name }} {{ user.last_name }}</h6>
+                        {% if user.is_corretor %}
+                                    <span class="badge bg-primary">Corretor</span>
+                                {% elif user.is_staff %}
+                                    <span class="badge bg-success">Admin</span>
+                                {% elif user.is_correspondente %}
+                                    <span class="badge bg-warning text-dark">Correspondente</span>
+                                {% endif %}
+                    </div>
+                </div>
+                
+                  <div class="navbar-nav w-100">
+                      <a href="{% url 'dashboard_redirect' %}" class="nav-item nav-link active"><i class="fas fa-tachometer-alt me-2"></i>Dashboard</a>
+                      <div class="nav-item dropdown">
+                          <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-laptop me-2"></i>Adicionar</a>
+                          <div class="dropdown-menu bg-transparent border-0">
+                            {% if request.user.is_superuser %}
+                              <a href="{% url 'cadastro_corretores' %}" class="dropdown-item">Corretores</a>
+                              <a href="{% url 'cadastro_correspondentes' %}" class="dropdown-item">Correspondentes</a>
+                              {% endif %}
+    
+                              <a href="{% url 'cliente-create' %}" class="dropdown-item">Cliente</a>
+                              {% if request.user.is_superuser %}
+                              <a href="{% url 'adicionar_imovel' %}" class="dropdown-item">Imóveis</a>
+                              {% endif %}
+                              <a href="{% url 'upload_video' %}" class="dropdown-item">Vídeos</a>
+                          </div>
                       </div>
-                  </div>
-                  <div class="nav-item dropdown">
-                      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-th me-2"></i>Lista</a>
-                      <div class="dropdown-menu bg-transparent border-0">
-                          <a href="{% url 'lista_clientes' %}" class="dropdown-item">Clientes</a>
-                          <a href="{% url 'lista_corretores' %}" class="dropdown-item">Corretores</a>
-                          <a href="{% url 'lista_imoveis' %}" class="dropdown-item">Imóveis</a>
-                          <a href="{% url 'lista_processos' %}" class="dropdown-item">Processo</a>
-                          <a href="{% url 'lista_proprietarios' %}" class="dropdown-item">Proprietários</a>
+                      <div class="nav-item dropdown">
+                          <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-th me-2"></i>Lista</a>
+                          <div class="dropdown-menu bg-transparent border-0">
+                              <a href="{% url 'lista_clientes' %}" class="dropdown-item">Clientes</a>
+                              {% if request.user.is_superuser %}
+                              <a href="{% url 'lista_corretores' %}" class="dropdown-item">Corretores</a>
+                              {% endif %}
+    
+                              <a href="{% url 'lista_imoveis' %}" class="dropdown-item">Imóveis</a>
+                              <a href="{% url 'lista_processos' %}" class="dropdown-item">Processo</a>
+                              <a href="{% url 'lista_proprietarios' %}" class="dropdown-item">Proprietários</a>
+                          </div>
                       </div>
-                  </div>
-                  <a href="{% url 'financas_view' %}" class="nav-item nav-link"><i class="fas fa-keyboard me-2"></i>Financeiro</a>
-                  <a href="{% url 'consulta_cpf' %}" class="nav-item nav-link"><i class="fas fa-table me-2"></i>Consulta de CPF</a>
-                  <a href="{% url 'assistir_videos' %}" class="nav-item nav-link"><i class="fas fa-chart-bar me-2"></i>Tutorial</a>
-                  <a href="{% url 'marketing' %}" class="nav-item nav-link"><i class="fas fa-chart-bar me-2"></i>Marketing</a>
-                  <a href="{% url 'relatorio_clientes' %}" class="nav-item nav-link"><i class="fas fa-chart-bar me-2"></i>Relatório de Clientes</a>
-              </div>
-          </nav>
+                      {% if request.user.is_superuser %}
+                      <a href="{% url 'financas_view' %}" class="nav-item nav-link"><i class="fas fa-keyboard me-2"></i>Financeiro</a>
+                      {% endif %}
+                      
+                      <a href="{% url 'consulta_cpf' %}" class="nav-item nav-link"><i class="fas fa-table me-2"></i>Consulta de CPF</a>
+                      
+                      <a href="{% url 'assistir_videos' %}" class="nav-item nav-link"><i class="fas fa-chart-bar me-2"></i>Tutorial</a>
+                      <a href="{% url 'marketing' %}" class="nav-item nav-link"><i class="fas fa-chart-bar me-2"></i>Marketing</a>
+                      {% if request.user.is_superuser %}
+                      <a href="{% url 'relatorio_clientes' %}" class="nav-item nav-link"><i class="fas fa-chart-bar me-2"></i>Relatório de Clientes</a>
+                      {% endif %}
+                    </div>
+              </nav>
       </div>
       
         <!-- Sidebar End -->
