--- a/templates/cliente_processo.html
+++ b/templates/cliente_processo.html
@@ -70,11 +70,16 @@
    vertical-align: middle;
    }
 </style>
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <body class="g-sidenav-show bg-gray-100">
    <div class="container-fluid">
       <div class="row mt-4">
          <!-- Coluna esquerda -->
-         <div class="col-lg-7 mb-lg-0 mb-4">
+        
             
 
             <div class="card z-index-2 h-100">
@@ -150,35 +155,6 @@
 
            
          </div>
-
-         <!-- Coluna direita para a linha do tempo -->
-         <div class="col-lg-5">
-            <div class="card z-index-2 h-100">
-               <div class="timeline">
-                  {% for campo in opcoes_disponiveis %}
-                     {% with campo_str=campo|stringformat:"s" %}
-                        {% if campo_str in opcoes_selecionadas_list %}
-                           <div class="timeline-item completed">
-                              <div class="timeline-icon completed">{{ forloop.counter }}</div>
-                              <div class="timeline-content">
-                                 <h4>{{ campo }}</h4>
-                              </div>
-                           </div>
-                        {% else %}
-                           <div class="timeline-item">
-                              <div class="timeline-icon">{{ forloop.counter }}</div>
-                              <div class="timeline-content">
-                                 <h4>{{ campo }}</h4>
-                              </div>
-                           </div>
-                        {% endif %}<br>
-                     {% endwith %}
-                  {% endfor %}
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
 
 
    <!-- Add Note Modal -->
